[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Animations/attack.tres" type="SpriteFrames" id=1]
[ext_resource path="res://scripts/attackPlayer.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 3.93121, 3.07784 )

[node name="attackPlayer" type="Area2D"]
scale = Vector2( 3, 3 )
z_as_relative = false
collision_layer = 64
collision_mask = 2147483777
script = ExtResource( 2 )
damage = 40

<<<<<<< HEAD
[node name="Sprite" parent="." index="1"]
frame = 12
=======
[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = ExtResource( 1 )
animation = "fire"
frame = 4
playing = true

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 4.63338, -0.117987 )
scale = Vector2( 0.0915207, 0.296027 )
[connection signal="body_entered" from="." to="." method="_on_attack_body_entered"]
[connection signal="animation_finished" from="Sprite" to="." method="_on_Sprite_animation_finished"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
>>>>>>> f4f2a932d2eec1bdb8f65b6cc7ab3411316125c9
